# DazToRoblox

./: CMakeLists.txt  README.md
DazLibraryFiles/: DAZ_3D_Daz_to_Roblox_Studio_Starter_Essentials.dsx
DazLibraryFiles/People/Genesis 9/: Genesis 9 for Roblox 01.duf  Genesis 9 for Roblox 02.duf  Genesis 9 for Roblox 03.duf  (+3 more)
DazStudioPlugin/: CMakeLists.txt  DzRoblox.aps  DzRoblox.rc  DzRobloxAction.cpp  DzRobloxAction.h  DzRobloxDialog.cpp  DzRobloxDialog.h  pluginmain.cpp  real_version.h  resource.h  version.h
DazStudioPlugin/Resources/: resources.qrc
DazStudioPlugin/Resources/Images/: Daz to Roblox Studio banner.xcf  Daz to Roblox Studio.xcf  Daz to Roblox.xcf
DevKit/: Daz_Cage_Att_Template.blend  Daz_Cage_Att_Template.fbx
DevKit/2D_Replacements/: g9 eyebrow template.xcf  g9 eyeliner template.xcf
DevKit/CustomModestyOverlays/: g9_grey_sportsbra_torso_modesty_overlay.xcf  g9_straplessbra_torso_modesty_overlay_v4.xcf  white_strap_bikini_torso_modesty_overlay_v2.xcf  white_strapless_bikini_torso_modesty_overlay_v3.xcf
DevKit/ModestyOverlay_ProjectFiles/: Bikini_Overlay_Torso_v2.xcf
DevKit/Replacements/: game_engine_eyebrows.duf  game_engine_eyelashes.duf  roblox_hand_grip.duf
DevKit/Scripts/: bake_hands_and_feet.dsa  bake_makeup_and_skin.dsa  texture_atlas_clothing_or_hair.dsa
InternalAssets/: Daz To Roblox Disclaimer.docx  Daz To Roblox Disclaimer.htm  Daz to Roblox EULA.htm  G9_Cage_Att_MVC_Template_15.fbx  G9_facs50_maya.fbx  Genesis9_Facial_Animation_FACS50_2.blend  Roblox Remove Overlays.tip.xcf  V9_Attachments_Only.blend  V9_Cage_Att_MVC_Template_10.fbx  V9_Cage_Att_MVC_Template_11.fbx  V9_Cage_Att_MVC_Template_13.fbx  V9_Cage_Att_MVC_Template_5.fbx  V9_Cage_Att_MVC_Template_6.fbx  V9_Cage_Att_MVC_Template_7.fbx  V9_Cage_Att_MVC_Template_8.fbx  V9_Cage_Att_MVC_Template_9.fbx  bind_attachments_to_bones.py  combine_head_diffuse_with_overlays.dsa  decimate_to_triangle_target.py  draft_copy_facial_animations.py  eye_geograft.mtl  eye_morph.mtl  game_engine_eye_geograft.duf  game_engine_eye_geograft_2.duf  game_engine_groin_project_3.duf  game_engine_mouth_geograft.duf  game_engine_mouth_project.duf  game_engine_mouth_project_2.duf  genesis9_head_modesty_overlay_combined_M_v2.xcf  genesis9_torso_modesty_overlay_combined.xcf  genesis9_torso_modesty_overlay_combined_M.xcf  genesis9_torso_modesty_overlay_combined_M_v2.xcf  genesis9_torso_modesty_overlay_d.xcf  genesis9_torso_modesty_overlay_d_M.xcf  genesis9_torso_modesty_overlay_r.xcf  list_selected_verts_by_index.py  make_eye_geograft.blend  make_eye_geograft.mtl  make_eye_geograft_2.blend  make_eye_morph.blend  (+16 more)
PluginData/: Daz_FACS_List.json  G8_R15_bone_mapping.json  G9_Cage_Att_MVC_Template.fbx  G9_R15_bone_mapping.json  Genesis9Action.blend  RobloxUVMapTransferSettings_G9Body.dsx  RobloxUVMapTransferSettings_G9Body_SW.dsx  RobloxUVMapTransferSettings_G9Eyes.dsx  RobloxUVMapTransferSettings_G9Eyes_SW.dsx  RobloxUVMapTransferSettings_G9Mouth.dsx  RobloxUVMapTransferSettings_G9Mouth_SW.dsx  V9_Cage_Att_MVC_Template.fbx  apply_diffuse_head_overlay_sArg.dsa  apply_modesty_overlay.dsa  apply_modesty_overlay_M.dsa  apply_modesty_overlay_aArgs.dsa  assign_combined_textures.dsa  blender_dtu_to_avatar_autosetup.py  blender_dtu_to_r15_accessories.py  blender_dtu_to_r15_clothing.py  blender_dtu_to_roblox_blend.py  blender_tools.py  bone_converter.dsa  combine_texture_parts.dsa  game_engine_eye_geograft.duf  game_engine_eyelashes.duf  game_engine_groin_geograft.duf  game_engine_mouth_geograft.duf  game_readiness_roblox_data.py  game_readiness_tools.py  generate_texture_parts.dsa  generate_texture_parts_SW.dsa  prepare_software_maptransfer.dsa  roblox_tools.py
Test/UnitTests/: CMakeLists.txt  UnitTest_DzRobloxAction.cpp  UnitTest_DzRobloxAction.h  UnitTest_DzRobloxDialog.cpp  UnitTest_DzRobloxDialog.h
UgcDevKit/: Daz_Cage_Att_Template.blend  Daz_Cage_Att_Template_Alternative.fbx  Daz_Cage_Att_Template_v4b.blend  Daz_Cage_Att_Template_v5d.blend  Example_Genesis9_without_cage_att.fbx  merge_cage_att_from_template.py
(+33 files in other folders)
